# moodle-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  ci.yml  client.py  pyproject.toml  server.py  test_moodle_mcp.py
deploy/qdrant/: README.md  config.yaml.example  qdrant.service
src/moodle_mcp/: client.py  formatting.py  ingest.py  rag.py  server.py
tests/: conftest.py  test_ingest.py  test_moodle_mcp.py
